--- a/q/1576.html
+++ b/q/1576.html
@@ -26,25 +26,40 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>2329</td><td>SageMath</td><td>240905T121948Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/275371#275371">12431234</a></td></tr>
-<tr d-ix="1"><td>058</td><td>JavaScript</td><td>240904T092553Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/275343#275343">Shaggy</a></td></tr>
-<tr d-ix="2"><td>059</td><td>Python 2</td><td>240904T002929Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/275339#275339">Lucenapo</a></td></tr>
-<tr d-ix="3"><td>002</td><td>Vyxal</td><td>221106T173314Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/254279#254279">pacman25</a></td></tr>
-<tr d-ix="4"><td>012</td><td>Perl 5 Mbignum=bexp p</td><td>200123T221837Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/198422#198422">Xcali</a></td></tr>
-<tr d-ix="5"><td>007</td><td>Mathematica</td><td>200123T181503Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/198408#198408">RGS</a></td></tr>
-<tr d-ix="6"><td>002</td><td>05AB1E</td><td>160502T071331Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/79116#79116">user5340</a></td></tr>
-<tr d-ix="7"><td>nan</td><td>Mathcad</td><td>160502T130853Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/79143#79143">Stuart B</a></td></tr>
-<tr d-ix="8"><td>014</td><td>GTB</td><td>140202T225754Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/19892#19892">Timtech</a></td></tr>
-<tr d-ix="9"><td>017</td><td>J</td><td>140202T224358Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/19890#19890">barbermo</a></td></tr>
-<tr d-ix="10"><td>017</td><td>bc</td><td>140202T203653Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/19886#19886">Tomas</a></td></tr>
-<tr d-ix="11"><td>069</td><td>Python</td><td>110313T132148Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1586#1586">hallvabo</a></td></tr>
-<tr d-ix="12"><td>020</td><td>J</td><td>110313T041833Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1581#1581">Jesse Mi</a></td></tr>
-<tr d-ix="13"><td>041</td><td>GolfScript</td><td>110313T144140Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1588#1588">aaaaaaaa</a></td></tr>
-<tr d-ix="14"><td>068</td><td>Ruby</td><td>110313T010850Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1578#1578">david4de</a></td></tr>
-<tr d-ix="15"><td>067</td><td>Python</td><td>110313T095020Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1582#1582">jfs</a></td></tr>
-<tr d-ix="16"><td>012</td><td>Mathematica</td><td>110313T010003Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1577#1577">Quixotic</a></td></tr>
+<tr d-ix="0"><td>050</td><td>APLNARS</td><td>240911T083929Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/275474#275474">Rosario</a></td></tr>
+<tr d-ix="1"><td>2329</td><td>SageMath</td><td>240905T121948Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/275371#275371">12431234</a></td></tr>
+<tr d-ix="2"><td>058</td><td>JavaScript</td><td>240904T092553Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/275343#275343">Shaggy</a></td></tr>
+<tr d-ix="3"><td>059</td><td>Python 2</td><td>240904T002929Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/275339#275339">Lucenapo</a></td></tr>
+<tr d-ix="4"><td>002</td><td>Vyxal</td><td>221106T173314Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/254279#254279">pacman25</a></td></tr>
+<tr d-ix="5"><td>012</td><td>Perl 5 Mbignum=bexp p</td><td>200123T221837Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/198422#198422">Xcali</a></td></tr>
+<tr d-ix="6"><td>007</td><td>Mathematica</td><td>200123T181503Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/198408#198408">RGS</a></td></tr>
+<tr d-ix="7"><td>002</td><td>05AB1E</td><td>160502T071331Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/79116#79116">user5340</a></td></tr>
+<tr d-ix="8"><td>nan</td><td>Mathcad</td><td>160502T130853Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/79143#79143">Stuart B</a></td></tr>
+<tr d-ix="9"><td>014</td><td>GTB</td><td>140202T225754Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/19892#19892">Timtech</a></td></tr>
+<tr d-ix="10"><td>017</td><td>J</td><td>140202T224358Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/19890#19890">barbermo</a></td></tr>
+<tr d-ix="11"><td>017</td><td>bc</td><td>140202T203653Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/19886#19886">Tomas</a></td></tr>
+<tr d-ix="12"><td>069</td><td>Python</td><td>110313T132148Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1586#1586">hallvabo</a></td></tr>
+<tr d-ix="13"><td>020</td><td>J</td><td>110313T041833Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1581#1581">Jesse Mi</a></td></tr>
+<tr d-ix="14"><td>041</td><td>GolfScript</td><td>110313T144140Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1588#1588">aaaaaaaa</a></td></tr>
+<tr d-ix="15"><td>068</td><td>Ruby</td><td>110313T010850Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1578#1578">david4de</a></td></tr>
+<tr d-ix="16"><td>067</td><td>Python</td><td>110313T095020Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1582#1582">jfs</a></td></tr>
+<tr d-ix="17"><td>012</td><td>Mathematica</td><td>110313T010003Z</td><td><a href="https://codegolf.stackexchange.com/questions/1576/compute-the-first-n-digits-of-e/1577#1577">Quixotic</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>SageMath, 23 Byte (function) or 29 (using stdin and stdout)</h2>
+<div id="pu0" class="pu"><h1>APL(NARS), 50 chars</h1>
+<pre><code>{(⍵+2)↑{∧/'90'∊⍨¯3↑m←{⎕FPC←7×⍵⋄⍵⍕*1v}⍵+3:∇⍵+1⋄m}⍵}
+</code></pre>
+<p>this would find at last 3 digit more than the solution because problem of round last digit. Then cut if the last
+part 3 digits has no &quot;0&quot; or &quot;9&quot;, otherwise search increment the precision, until the last 3 digits has no &quot;0&quot; or &quot;9&quot;.
+It seems the round problem there is only in the case last 3 digits are &quot;999&quot; or &quot;000&quot;, so for brevity one can say
+&quot;the last 3 digits have no 0 or 9&quot;.</p>
+<pre><code>    h←{(⍵+2)↑{∧/'90'∊⍨¯3↑m←{⎕FPC←7×⍵⋄⍵⍕*1v}⍵+3:∇⍵+1⋄m}⍵}
+    h 100
+  2.718281828459045235360287471352662497757247093699959574966967627724076630353547594571382178525166427
+    h 7
+  2.718281
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h2>SageMath, 23 Byte (function) or 29 (using stdin and stdout)</h2>
 <p>Define a lambda function</p>
 <pre><code>f=lambda n: e.n(None,n)
 </code></pre>
@@ -52,7 +67,7 @@
 <pre><code>print(e.n(None,int(input())))
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1>JavaScript, 58 bytes</h1>
+<div id="pu2" class="pu"><h1>JavaScript, 58 bytes</h1>
 <p>Adaptation of <a href="https://codegolf.stackexchange.com/a/275339/58974">Lucenaposition's Python solution</a>.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>i=&gt;`2.`+(g=x=&gt;y?g(x/y--+10n**z):x+``)(y=z=999n).slice(1,i)
@@ -65,7 +80,7 @@
 </code></pre>
 <p><a href="https://tio.run/##DchBCoAgEADA76yVpUeDrVP/SNLEkFUqQvu8Ncc59KOv7fTp5hSNrTtWj9O69kmbhQz4DhxmnMrsIA@F81YKapqXjZlBwReVUsRY3SJdMdg@RAc7SCH@@wA" rel="nofollow noreferrer">Try it online!</a></p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 59 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://docs.python.org/2/" rel="nofollow noreferrer">Python 2</a>, 59 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>n=x=z=999
 while n:x=x/n+10**z;n-=1
@@ -73,13 +88,13 @@ print'2.'+`x`[1:input()]
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/r/P8@2wrbK1tLSkqs8IzMnVSHPqsK2Qj9P29BAS6vKOk/X1pCroCgzr0TdSE9dO6EiIdrQKjOvoLREQzP2/39DAwMDAA" rel="nofollow noreferrer" title="Python 2 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal" rel="nofollow noreferrer">Vyxal</a>, 2 bytes</h1>
 <pre><code>∆Ė
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/#WyIiLCIiLCLiiIbEliIsIiIsIiJd" rel="nofollow noreferrer">Try it Online!</a></p>
 <p>Built in solution.</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-Mbignum=bexp -p</code>, 12 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a> <code>-Mbignum=bexp -p</code>, 12 bytes</h1>
 
 
 
@@ -88,7 +103,7 @@ print'2.'+`x`[1:input()]
 
 <p><a href="https://tio.run/##K0gtyjH9/18l3jYptaJAwVBHJf7/f0Mjg3/5BSWZ@XnF/3V9kzLT80pzwfL/dQsA" rel="nofollow noreferrer" title="Perl 5 – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu5" class="pu"><h1>Mathematica, 7 bytes</h1>
+<div id="pu6" class="pu"><h1>Mathematica, 7 bytes</h1>
 
 <pre><code>N[E,#]&amp;
 </code></pre>
@@ -99,7 +114,7 @@ print'2.'+`x`[1:input()]
 
 <p>For some reason, the output over at TIO looks funny but I tested it on my machine and the code works just fine.</p>
 </div>
-<div id="pu6" class="pu"><h1>05AB1E, <strike>4</strike> <strike>3</strike> 2 bytes</h1>
+<div id="pu7" class="pu"><h1>05AB1E, <strike>4</strike> <strike>3</strike> 2 bytes</h1>
 
 <p><sub><a href="https://codegolf.stackexchange.com/questions/77899/substitution-cipher/77913#77913">Crossed out 4 is still regular 4 ;(</a></sub></p>
 
@@ -119,7 +134,7 @@ print'2.'+`x`[1:input()]
 
 <p>Remove <code>I</code>, as <code>žt</code> takes input anyway if none is on the stack.</p>
 </div>
-<div id="pu7" class="pu"><h2>Mathcad, [tbd] bytes</h2>
+<div id="pu8" class="pu"><h2>Mathcad, [tbd] bytes</h2>
 
 <p><a href="https://i.sstatic.net/ZNztU.jpg" rel="nofollow noreferrer"><img src="https://i.sstatic.net/ZNztU.jpg" alt="enter image description here"></a></p>
 
@@ -129,7 +144,7 @@ print'2.'+`x`[1:input()]
 
 <p>Byte count not given as Mathcad byte count equivalence is yet to be determined.  However, using a symbol equivalence it is roughly 121 bytes ... and not going to win any brevity prizes no matter how the equivalence is determined.</p>
 </div>
-<div id="pu8" class="pu"><h2><a href="http://timtechsoftware.com/?page_id=1309" rel="nofollow" title="GTB">GTB</a>, 14</h2>
+<div id="pu9" class="pu"><h2><a href="http://timtechsoftware.com/?page_id=1309" rel="nofollow" title="GTB">GTB</a>, 14</h2>
 
 <pre><code>eS?`AS;_,1,A+1
 </code></pre>
@@ -144,7 +159,7 @@ print'2.'+`x`[1:input()]
 
 <p><code>S;_,1,A+1</code> Display the first <code>A</code> digits of <code>e</code></p>
 </div>
-<div id="pu9" class="pu"><p><strong>J, 17</strong></p>
+<div id="pu10" class="pu"><p><strong>J, 17</strong></p>
 
 <pre><code>(":&amp;(x:^1)@*&amp;0j1)
 </code></pre>
@@ -162,18 +177,18 @@ x: - does extended precision
 0jy ": - formats the number to y digit
 </code></pre>
 </div>
-<div id="pu10" class="pu"><h1><a href="http://www.gnu.org/software/bc/manual/html_mono/bc.html" rel="nofollow noreferrer">bc</a>, 17 chars</h1>
+<div id="pu11" class="pu"><h1><a href="http://www.gnu.org/software/bc/manual/html_mono/bc.html" rel="nofollow noreferrer">bc</a>, 17 chars</h1>
 <pre><code>scale=read()
 e(1)
 </code></pre>
 </div>
-<div id="pu11" class="pu"><h2>Python, 69</h2>
+<div id="pu12" class="pu"><h2>Python, 69</h2>
 
 <pre>e=f=n=1;N=input()+2;exec"e+=10**N/f;f*=n;n+=1;"*N;print'2.'+`e`[1:-4]</pre>
 
 <p>Computes N+2 iterations of the standard power series for e.</p>
 </div>
-<div id="pu12" class="pu"><h1>J, 20...ish.</h1>
+<div id="pu13" class="pu"><h1>J, 20...ish.</h1>
 
 <p>Computational, but... Very inefficient. With n defined (20):</p>
 
@@ -190,7 +205,7 @@ e(1)
 <pre><code>(0 j.&lt;:)":(+/)&amp;:(%&amp;!&amp;i.&amp;x:&amp;(9&amp;+))
 </code></pre>
 </div>
-<div id="pu13" class="pu"><h1>GolfScript <strike>43</strike> 41</h1>
+<div id="pu14" class="pu"><h1>GolfScript <strike>43</strike> 41</h1>
 
 <pre><code>~10\?1:b 461,{)b*:b@+\}460*;*b/`);(;'2.'\
 </code></pre>
@@ -217,18 +232,18 @@ The stack now hold the value e*10^input which when converted to a string will ho
 
 <p>e*460! is calculated as 1 + 460 + 460*459 + 460*459*458 etc.</p>
 </div>
-<div id="pu14" class="pu"><h1>Ruby, 68</h1>
+<div id="pu15" class="pu"><h1>Ruby, 68</h1>
 <pre><code>require 'bigdecimal/math';include BigMath;puts E(gets.to_i).to_s 'F'
 </code></pre>
 </div>
-<div id="pu15" class="pu"><h1>Python, 67</h1>
+<div id="pu16" class="pu"><h1>Python, 67</h1>
 
 <pre><code>import decimal as d
 d.getcontext().prec=input()
 print d._One.exp()
 </code></pre>
 </div>
-<div id="pu16" class="pu"><h2>Mathematica (12 bytes)</h2>
+<div id="pu17" class="pu"><h2>Mathematica (12 bytes)</h2>
 
 <pre><code>N[E,Input[]]
 </code></pre>
