--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240911T090937Z
+"   /golfscore                                      20240911T092901Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/185062.html">A factorization game                            : 0185062</a>
 <a href="q/178873.html">Matrix rotation sort                            : 0178873</a>
 <a href="q/1576.html">Compute the first N digits of e                 : 0001576</a>
 <a href="q/50870.html">Expand an encoded string                        : 0050870</a>
