--- a/q/185062.html
+++ b/q/185062.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>035</td><td>Wolfram Language Mathematica</td><td>190503T043817Z</td><td><a href="https://codegolf.stackexchange.com/questions/185062/a-factorization-game/185090#185090">att</a></td></tr>
+<tr d-ix="0"><td>031</td><td>Wolfram Language Mathematica</td><td>190503T043817Z</td><td><a href="https://codegolf.stackexchange.com/questions/185062/a-factorization-game/185090#185090">att</a></td></tr>
 <tr d-ix="1"><td>010</td><td>Husk</td><td>201030T155516Z</td><td><a href="https://codegolf.stackexchange.com/questions/185062/a-factorization-game/214442#214442">LegionMa</a></td></tr>
 <tr d-ix="2"><td>009</td><td>Gaia</td><td>190502T151201Z</td><td><a href="https://codegolf.stackexchange.com/questions/185062/a-factorization-game/185070#185070">Giuseppe</a></td></tr>
 <tr d-ix="3"><td>052</td><td>Wolfram Language Mathematica</td><td>190502T140556Z</td><td><a href="https://codegolf.stackexchange.com/questions/185062/a-factorization-game/185064#185064">ZaMoC</a></td></tr>
@@ -41,10 +41,10 @@
 <tr d-ix="12"><td>039</td><td>Javascript ES6</td><td>190502T145618Z</td><td><a href="https://codegolf.stackexchange.com/questions/185062/a-factorization-game/185069#185069">user8371</a></td></tr>
 <tr d-ix="13"><td>038</td><td>Perl 6</td><td>190502T143514Z</td><td><a href="https://codegolf.stackexchange.com/questions/185062/a-factorization-game/185067#185067">Jo King</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>38</s> 35 bytes</h1>
-<pre><code>If[i∣n,n/=i,--c]~Do~{i,c=n=#}0+c&amp;
+<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, <s>38</s> <s>35</s> 31 bytes</h1>
+<pre><code>If[i∣n,n/=i;1,0]~Sum~{i,n=#}&amp;
 </code></pre>
-<p><a href="https://tio.run/##y00syUjNTSzJTE78n2b73zMtOvNRx@I8nTx920wdXd3k2DqX/LrqTJ1k2zxb5VoD7WS1/wFFmXkl0cq6dmkOyrFq@g5c1YY6ZjqG5jqmZjqWhjqGQMrQyBJEGBsBuUbmxhaGtf//AwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##y00syUjNTSzJTE78n2b73zMtOvNRx@I8nTx920xrQx2D2Lrg0ty66kydPFvlWrX/AUWZeSXRyrp2aQ7KsWr6DlzVhjpmOobmOqZmOpaGOoZAytDIEkQYGwG5RubGFoa1//8DAA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Greedy algorithm. Times out on TIO on larger inputs such as <code>1099511627776</code>.</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 10 bytes</h1>
