--- a/q/101289.html
+++ b/q/101289.html
@@ -103,6 +103,18 @@
 <pre><code>Oq`LoÃHg... `+U°g&quot;|/-\\&quot;#út@ß
 </code></pre>
 <p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;code=T3FgTG/DSGcuLi4gYCtVsGcifC8tXFwiI/p0QN8" rel="nofollow noreferrer">Test it</a></p>
+<pre><code>Oq`...`+U°g&quot;...&quot;#út@ß
+Oq                        :Overwrite the output with
+  `...`                   :  Compressed string &quot;Loading... &quot;
+       +                  :  Append
+        U                 :    First input variable (defaults to 0)
+         °                :    Postfix increment
+          g&quot;...&quot;          :    0-based index into the literal string
+                #ú        :250
+                  t       :Set a timeout of 250ms
+                   @      :To run the following function
+                    ß     :  Recursive call
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://support.casio.com/storage/en/manual/pdf/EN/004/fx-9860GIII_Soft_v340_EN.pdf" rel="nofollow noreferrer">Casio BASIC (fx-9750giii)</a>, 64 bytes</h1>
 <pre><code>&quot;Loading...&quot;
