--- a/q/233618.html
+++ b/q/233618.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>110</td><td>JavaScript Node.js</td><td>240910T122648Z</td><td><a href="https://codegolf.stackexchange.com/questions/233618/distances-between-keys-on-a-qwerty-keyboard/275456#275456">l4m2</a></td></tr>
+<tr d-ix="0"><td>109</td><td>JavaScript Node.js</td><td>240910T122648Z</td><td><a href="https://codegolf.stackexchange.com/questions/233618/distances-between-keys-on-a-qwerty-keyboard/275456#275456">l4m2</a></td></tr>
 <tr d-ix="1"><td>022</td><td>Vyxal ḋ</td><td>210822T111337Z</td><td><a href="https://codegolf.stackexchange.com/questions/233618/distances-between-keys-on-a-qwerty-keyboard/233619#233619">emanresu</a></td></tr>
 <tr d-ix="2"><td>027</td><td>05AB1E</td><td>210822T141846Z</td><td><a href="https://codegolf.stackexchange.com/questions/233618/distances-between-keys-on-a-qwerty-keyboard/233623#233623">ovs</a></td></tr>
 <tr d-ix="3"><td>088</td><td>Ruby</td><td>210823T233418Z</td><td><a href="https://codegolf.stackexchange.com/questions/233618/distances-between-keys-on-a-qwerty-keyboard/233659#233659">Level Ri</a></td></tr>
@@ -38,13 +38,12 @@
 <tr d-ix="9"><td>056</td><td>Charcoal</td><td>210822T123920Z</td><td><a href="https://codegolf.stackexchange.com/questions/233618/distances-between-keys-on-a-qwerty-keyboard/233620#233620">Neil</a></td></tr>
 <tr d-ix="10"><td>023</td><td>Jelly</td><td>210822T200444Z</td><td><a href="https://codegolf.stackexchange.com/questions/233618/distances-between-keys-on-a-qwerty-keyboard/233627#233627">Nick Ken</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 110 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://nodejs.org" rel="nofollow noreferrer">JavaScript (Node.js)</a>, 109 bytes</h1>
 
 <pre class="lang-javascript prettyprint-override"><code>a=&gt;b=&gt;Math.hypot(g(a)-g(b,q=p),p-q)*4.7625
-g=c=&gt;'4 80'[(p=&quot;A ZWS XED CRF VTG BYH NUJ MIK ,OL .P&quot;.search(c))&amp;3]
+g=c=&gt;8&gt;&gt;(p=&quot;QA ZWS XED CRF VTG BYH NUJ MIK ,OL .P&quot;.search(c))%4&amp;12
 </code></pre>
-<p><a href="https://tio.run/##VdBLb4JAFAXgPb/ihkWdaYYRAQumGRKxPmq1tW8pYTEgoI1xEEjT/noKmdCk2/Pl3OSeT/7Fy7g45JV2ErukTlnNmRsxd82rPd3/5KJCGeJYy1BEzizHJNfO@NKi9pUxVDIWM7dngaP3ApQzdQwf78@wnd7A5GkGby9z8PwF3L8uYX17B@RhBXSj0jLhRbxHMcYXZlhfBwpAAOpYJaB6KoQE@n1wbOoYErwWHjsYOXTgSJi3MOnAtKhpSVi0sOxgMKL6UMLqH5jNKV3CpoXtX8MyqWFL8VvxO9GVUKGpKKa8eQAFnEAUYmAuxOJUimNCj6JZq0kJpM1qKMK0ErPDd7JDBsa4/gU" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
-<p>Many spaces seems wasteful</p>
+<p><a href="https://tio.run/##VdBZa4NAFAXgd3/FRWiZKePELdVQRohplqZJm3SNFR9G45ISMkaltL/eKmKhr@fjXLjnk3/xMioOeaWcxD6uE1Zz5oTMWfMqo9lPLiqUIo6VFIXkzHJMcuWMr0xqXetDKWURc2zHQTmTt2P4eH@G3fQWJk8zeHuZg@st4OF1Ceu7eyCPK6AbmZYxL6IMRRhfmJeaXt/4EoAP8lgmILsyBAQGA7AtausduC1sexjZVLM7mLcw6cEwqWF2sGhh2YM2ouqwg9U/MJpTagebFnZ/DdOgutWJ14rXiyoFEk1EMeXNC8jnBMIAA3MgEqdSHGN6FM1YTUogaUZDIaaVmB2@4z3SMcb1Lw" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a> <code>ḋ</code>, 22 bytes</h1>
 <pre><code>ƛk•$Þḟ÷Ȯ⇩E+&quot;;ƒ∆d19.05*
