--- a/q/235964.html
+++ b/q/235964.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>193</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
+<tr d-ix="0"><td>191</td><td>sed 4.2.2 r</td><td>240711T061548Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/274071#274071">guest430</a></td></tr>
 <tr d-ix="1"><td>069</td><td>Swift 6</td><td>240907T215801Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275405#275405">macOSist</a></td></tr>
 <tr d-ix="2"><td>018</td><td>ARBLE</td><td>240903T225838Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275338#275338">ATaco</a></td></tr>
 <tr d-ix="3"><td>045</td><td>Clojure</td><td>240903T135137Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/275319#275319">NikoNyrh</a></td></tr>
@@ -113,28 +113,29 @@
 <tr d-ix="84"><td>005</td><td>Husk</td><td>211004T081650Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235966#235966">Dominic </a></td></tr>
 <tr d-ix="85"><td>008</td><td>Charcoal</td><td>211004T081405Z</td><td><a href="https://codegolf.stackexchange.com/questions/235964/implement-the-hyperfactorial/235965#235965">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup><sub><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s> <s>196</s></sub></sup></sub></sub></sup> 193 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.gnu.org/software/sed/" rel="nofollow noreferrer">sed 4.2.2</a> <code>-r</code>, <sup><sub><sub><sup><sub><s>291</s> <s>287</s> <s>276</s> <s>260</s> <s>255</s> <s>251</s> <s>248</s> <s>240</s> <s>233</s> <s>228</s> <s>226</s> <s>220</s> <s>219</s> <s>212</s> <s>209</s> <s>208</s> <s>207</s> <s>196</s> <s>193</s></sub></sup></sub></sub></sup> 191 bytes</h1>
 <pre><code>h;G;G
 :;s/.//;x;s/\s.*//
-:a;s/#*/&amp; &amp;/;T;x;s/^##/#/;x;ta
-x;s/#.#//;H;g;s/ ?//g;T
+:a;s/#*/&amp; &amp;/;T;
+:d;x;s/^##/#/;x;ta
+x;s/#\n#//;H;g;s/ ?//g;T
 s/\n##+\n/&amp;/;t
-s/^(#+).#.(#*)#/\2\n\2\n\2&#9;\1/;h;t
-s/.*\n/#/;tc
-:b;s/#*/&amp; &amp;/;T
-:c;s/##$/#/;tb
-s/ //g;s/&#9;#$//;/&#9;/tc
+s/^(#+)\n#\n(#*)#/\2\n\2\n\2&#9;\1/;h;t
+s/.*\n\n/#/;tz;s/\n.*//;T;:z
+h;x;s/.*&#9;//;x;s/&#9;#*$//;td
 </code></pre>
-<p><a href="https://tio.run/##TY/NTsMwEITP2aeItChKUtUTpz8QOyrH8gC91VRqQ5XSQ4pwDvDymHUQiIPlGe@3O15/fgnmbD32et48I2P09AldL5ar9f1Dg@pXgjy4QsOwY@QroA8Xu7VbMmIVYD/kdl6VAJmjaC6RpRnsbqocmMERGo8UPSuWnifbi04fZZrdSYQbmGdugLSNYg85zwrFKueyYLjaDT8ncRr2MiGqFDz@qiNz@p9KpouW76bqSdA0pngk8gSLBGMXzDUyaNu/lbnSm7hsropWZmuJVoUqN5IuY66hIk01LWj5dXsbX2@DD/P3bw" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~30-45 seconds)</a><br />
-<a href="https://tio.run/##ZZDNTsMwEITP8VNUWhTlR/XYaQs0rsqxPEBvDZWcUiXpIUU4BxDi1QnrAFVUDpZ3vONv7HXH5z4/Goedni6fEBIq8Q6dzeaL27v7JdRfCeFACkuC6bxfAVVfm43ZiJylBMwb74WTCSByyzUlCCchzHbo7IlA3tRZ4TVJ4juPpuJ68sA0s@WIoiVKixZ8rWO5jyiNJcmIkphQZEX7s4JCw9SDRSZs9686iLwcp4r84CXdDN2SrROf4hDwEQwCdIeeDR9aKfUJyz93sL@qZJXXbC6xWl3GUSq99oOIZLziXB2ViYxlsuaXcUTNnZ3iMaYIGeIJDRPsmGCvCXZMaP4TTv4PYwJdE2hMOPVKaJGJmZiLxdf5pWvOreunr98" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~30-50 seconds; more efficient/less elegant footer)</a><br />
+<p><a href="https://tio.run/##PU/LbsIwEDxnvwJpqygxwhMHCk0c0SP9AG51kZBASTmYqvah5eObrtPHwdqd9ezOTDifxvZsA57NonlBzujpE6Zeru7Xm4cG1V8LCuAKDcPGxK@Afhzszu6oFagB@yHVBa0Aao/Ss0I@y2H3ltrT9HtgBidiPFLC7DzL4pPtBcwe5aTdi45Mee48ZDcKPBQ8L2XmfMGqZLja@Z@XOQM7TCStZODT9XhLPnzyIdLtjYZJW6vs12PG6k7aKMkvyQS67j8wV2aboha67OSkEUVdarUVUdm4jBUZqmlJq6/rW3y9@jAu3r8B" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-4, ~30-45 seconds)</a><br />
+<a href="https://tio.run/##ZZBNbsIwEIXX@BRIU0WJER6bn7bEiC7pAdjhIjkKIrAwVZNFS9WrN32mFEV0YXneeOab56m3ZZtvbc1rM5y9cEK8Ex9sRuPJ9P7hccb6L2RRM2meEdsm1mvmXVvZpV2KHFIx23fcrlaSWeQeMUlO@gnblRV5eX7dEDHFwsaLqMkFQuOz3UH0n4C0K8xBlgYuMHobyE1Kgww5F1KSGbEbufB7es6wrc5FSiIRIr05RR8h@sDo/CSq82wlexePPZJ3CJuyhYNPo7X@Yo9/1@wvqoDKK5QWPJ9fl1Fos4hrSFU2xziTFlJlSi5gCLQKL2uNJQ44ASQS9iD4LsHfEnyXsP9POMQldQl0S6Au4dBqYcRIjMVETL@Pr83@GOp2@PYD" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-5, ~45-60 seconds; more efficient/less elegant footer)</a><br />
 <a href="https://tio.run/##XZDNasMwEITP3acILBhbJhrJ@bVl0mP6ALlFDQgaHOfghNqHltJXr7tKaQk9CM2yM99q1R9fxuroeuzttHxGwmjoHbaYzRfL1bqE@ZWgHmxQMtwQ/QZoxpPbui1VUmrAvcnte60AqoJoVkgmCdzu1jkwg6NpCBRr1iyZJ9eInjwKze1khO@Yc99BYoOUh5TzTLNOWWUMX/ju5zx4C3e6WbQSO2MU4oc1xnwiyA5VK9iAuv5bJRi7iUukOqslY9OgdKbVRqgyq5XO3sgX5EgEEgnn@Mh7Av8n8D3hPBqyVNCM5rSgJa2@LtehvXT9OH39Bg" rel="nofollow noreferrer" title="sed 4.2.2 – Try It Online">Try it online! (cases 0-7, ~20 seconds; calculate the powers but don't multiply them together)</a></p>
 <p>takes input and output as unary <code>#</code>s. TIO links include conversion to/from decimal in header/footer.</p>
-<p>after two months and nearly 100 bytes of golfing, I think it's high time to actually write out an explanation. normally, I add the explanation in comments next to the code, but I think explaining the data format first will work better with this one. the PATTERN and HOLD spaces are switched around a lot, but let's call this the PATTERN space:</p>
+<p>after two months and 100 bytes of golfing, I think it's high time to actually write out an explanation. normally, I add the explanation in comments next to the code, but I think explaining the data format first will work better with this one. the PATTERN and HOLD spaces are switched around a lot, but let's call this the PATTERN space:</p>
 <pre><code>add
 mult
 pow&#9;prev</code></pre>
 <p>each 'variable' is a unary number of <code>#</code>s which keeps track of how many more times we need to preform each operation. the first one used is <code>add</code>, where the <code>b</code> loop adds the HOLD space (which is currently <code>pow</code>) to itself and decrements <code>add</code>. once <code>add</code> is 0 (ie HOLD now equals <code>add * pow</code>), <code>mult</code> gets decremented by one and <code>add</code> is set to HOLD. once <code>mult</code> is 1 (ie HOLD now equals <code>pow ^ pow</code>), <code>pow</code> is decremented, <code>add</code> and <code>mult</code> are set to <code>pow</code>, and <code>prev</code> gets set to <code>HOLD\tprev</code> (where <code>\t</code> is a tab character). once <code>pow</code> is 0, we have calculated <code>n^n</code> for every <code>n</code>, starting at the input and going all the way down to 0, with the results separated by tabs, like this:</p>
 <pre><code>1&#9;4&#9;27&#9;256&#9;3125&#9;...</code></pre>
+<hr />
+<p>(explanation past here has been invalidated by my most recent golf; now it re-uses the first loop instead of making another, I'll edit the explanation later)</p>
 <p>the last four lines then add the first entry to itself the last entry number of times, for as long as there are multiple entries. with that explained, here's my attempt at commenting the code itself (some <code>;</code> have been changed to <code>\n</code>s to give room for more explanations):</p>
 <pre><code>h;G;G                                    #set HOLD, add, mult, and pow to input
 :                                        #label UNNAMED (main loop)
