--- a/q/57193.html
+++ b/q/57193.html
@@ -66,7 +66,16 @@
 <div id="pu0" class="pu"><h1><a href="https://github.com/ETHproductions/japt" rel="nofollow noreferrer">Japt</a> <a href="https://codegolf.meta.stackexchange.com/a/14339/"><code>-R</code></a>, 6 <a href="https://en.wikipedia.org/wiki/ISO/IEC_8859-1" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>¸ËçÑÃf
 </code></pre>
-<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=uMvn0cNm&amp;input=ImRvdWJsZSBzcGFjZSAgZXhhbXBsZSI" rel="nofollow noreferrer">Try it</a></p>
+<p><a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=uMvn0cNm&amp;input=IlRoaXMgaXMgYW4gZXhhbXBsZSBoaXN0b2dyYW0gb2Ygd29yZCBsZW5ndGgi" rel="nofollow noreferrer">Try it</a> or <a href="https://petershaggynoble.github.io/Japt-Interpreter/?v=1.4.6&amp;flags=LVI&amp;code=uMvn0cNm&amp;footer=aVdnVim3&amp;input=WwoiVGhpcyBpcyBhbiBleGFtcGxlIGhpc3RvZ3JhbSBvZiB3b3JkIGxlbmd0aCIKJycKImEgYWEgYWFhIGFhYWEgYWFhYWEiCicnCiJkb3VibGUgc3BhY2UgIGV4YW1wbGUiCl0tbQ" rel="nofollow noreferrer">run all test cases</a></p>
+<pre><code>¸ËçÑÃf     :Implicit input of string
+¸          :Split on spaces
+ Ë         :Map
+  ç        :  Fill with
+   Ñ       :    &quot;*&quot;
+    Ã      :End map
+     f     :Filter
+           :Implicit output joined with newlines
+</code></pre>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/barbuz/Husk" rel="nofollow noreferrer">Husk</a>, 7 bytes</h1>
 <pre><code>moR'*Lw
