--- a/q/35516.html
+++ b/q/35516.html
@@ -26,11 +26,11 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>175</td><td>Python</td><td>140802T062018Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/35584#35584">DykgNUtR</a></td></tr>
-<tr d-ix="1"><td>133</td><td>///</td><td>240911T190559Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/275480#275480">autumn</a></td></tr>
-<tr d-ix="2"><td>096</td><td>Stax</td><td>240910T211313Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/275466#275466">Khuldrae</a></td></tr>
-<tr d-ix="3"><td>147</td><td>Bubblegum</td><td>240911T093636Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/275475#275475">Themooni</a></td></tr>
-<tr d-ix="4"><td>154</td><td>Zsh</td><td>240121T185607Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/269444#269444">pxeger</a></td></tr>
+<tr d-ix="0"><td>153</td><td>Zsh</td><td>240121T185607Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/269444#269444">pxeger</a></td></tr>
+<tr d-ix="1"><td>175</td><td>Python</td><td>140802T062018Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/35584#35584">DykgNUtR</a></td></tr>
+<tr d-ix="2"><td>133</td><td>///</td><td>240911T190559Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/275480#275480">autumn</a></td></tr>
+<tr d-ix="3"><td>096</td><td>Stax</td><td>240910T211313Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/275466#275466">Khuldrae</a></td></tr>
+<tr d-ix="4"><td>147</td><td>Bubblegum</td><td>240911T093636Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/275475#275475">Themooni</a></td></tr>
 <tr d-ix="5"><td>122</td><td>05AB1E</td><td>191122T094955Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/196267#196267">Kevin Cr</a></td></tr>
 <tr d-ix="6"><td>160</td><td>R</td><td>190820T141303Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/190429#190429">Sumner18</a></td></tr>
 <tr d-ix="7"><td>097</td><td>Stax</td><td>180416T193204Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/162492#162492">recursiv</a></td></tr>
@@ -93,13 +93,23 @@
 <tr d-ix="64"><td>176</td><td>Python</td><td>140801T163455Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/35531#35531">nneonneo</a></td></tr>
 <tr d-ix="65"><td>171</td><td>PHP</td><td>140801T170533Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/35534#35534">Arctican</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Python: 175</h2>
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 153 bytes</h1>
+<pre class="lang-bash prettyprint-override"><code>set I\'m Slim Shady real stand
+&lt;&lt;.
+$1${6= $2 $3}. Yes, $1 the $4 $5.
+All you other$6s are just imitating.
+So, won't the $4$6 p${x=lease $5 up}?
+P$x. P$x.
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=LY7PCoJAHITv-xSD_MBLLdgf6WBEx26Cp6gOC265sam4K2nig0QXIeqdepuMvHzDDAx8j-fNJO-dMw6dQ_cq7XG8-NyNtNjs3QsirXokIq5RSKFhrEhjFgSckUeNvwRNQNOWYyvNCOTBJhI0A805W2uNOiuR9VtBvoEoJM6lsVAXZYVV6YmzKBvhmqWuHZ7kI6emWmopTN_nKPN2xUKqOH74Cw6e3ZBf" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h2>Python: 175</h2>
 <p>Just a small change to <a href="https://codegolf.stackexchange.com/a/35531/88192">the answer by <strong>nneonneo</strong></a>, but i can't comment and there don't seem to be private messages on this website so i'll post it this way.</p>
 <pre><code>a=&quot;Slim Shady&quot;
 print&quot;{0}{1}. Yes, {0}{3}{2}.\nAll you other {1}s are just imitating.\nSo, won't {3}{1} p{4}?\nP{4}. P{4}.&quot;.format(&quot;I'm &quot;,a,a[5:],&quot;the real &quot;,&quot;lease stand up&quot;)
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki////" rel="nofollow noreferrer">///</a>, 133 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://esolangs.org/wiki////" rel="nofollow noreferrer">///</a>, 133 bytes</h1>
 <pre><code>/@/ Slim//#/ Shady//$/lease stand up//_/ the real//&amp;/I'm/&amp;@#. Yes, &amp;_#.
 All you other@#s are just imitating.
 So, won't_@# p$?
@@ -108,14 +118,14 @@ P$. P$.
 <p><a href="https://tio.run/##DcqxCoMwFIXh3ac4ENFFch6h6dit0KmTXPBSU6IRb6T49KnDD9/wWxKb1WplIF4pLqS7MMt0ki2TiimsyDrh2MiRKLNiV0lkx0e/sAvO4602oBudb@4p4cwH8vXtwRlkV3wPK4hLLFLi@vHNKw/45bUvY3DY2lvzbD2uav0D" rel="nofollow noreferrer" title="/// – Try It Online">Try it online!</a></p>
 <p>Possibly a bit more golfable. I beat Bubblegum of all things! Might try porting this to Retina.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 96 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/tomtheisen/stax" rel="nofollow noreferrer">Stax</a>, 96 <a href="https://github.com/tomtheisen/stax/blob/master/docs/packed.md#packed-stax" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>é2Å╤▲╟[â;ILxΩp≤◄↑ú-◄δ╢ù‼↓╛Θäε&gt;╧9«∞▓m╓♫çµΦ╝∞↑▼πKjPDπ ╖═Gy┬H/▄ä╖R╕~≈EGí⌐◄≈┌@*realShadyI'mSlimstand
 </code></pre>
 <p><a href="https://staxlang.xyz/#p=82328fd11ec75b833b494c78ea70f31118a32d11ebb6971319bee984ee3ecf39aeecb26dd60e87e6e8bcec181fe34b6a5044e320b7cd4779c2482fdc84b752b87ef74547a1a911f7da402a7265616c536861647949276d536c696d7374616e64&amp;i=&amp;a=1" rel="nofollow noreferrer">Run and debug it at staxlang.xyz!</a></p>
 <p>Wow, it's been a while. I'm taking credit this time :) Same idea as <a href="https://codegolf.stackexchange.com/a/162492/73884">this 97-byter</a>, but it saves a byte in the unpacked program at the cost of making a suitable packed one harder to find. Unpacks to a nonsense no-op <code>G...}</code> followed by the actual program. There are <a href="https://staxlang.xyz/#p=82328fd11ec75b833b494c78ea70f31118a32d11ebb6971319bee984ee3ecf39aeecb26dd60e87e6e8bcec181fe34b6a5044e320b7cd4779c2482fdc84b752b87ef74547a1a911f7da402a7265616c536c696d7374616e6449276d5368616479&amp;i=&amp;a=1" rel="nofollow noreferrer">more at 96 bytes</a> that follow this pattern; this one is just the first I found.</p>
 <p>Near miss for 95 bytes: <a href="https://staxlang.xyz/#p=85ebf4ba42c5add833f8b883d0af0591c66ef568e195cd004560c61d7488eb0c9ec949ea002728282d1abce2b18ceb8faa7e59454d9d0c0f84cd4dc61ce088adccb546d13248f270c8157374616e64536c696d49276d7265616c5368616479&amp;i=&amp;a=1" rel="nofollow noreferrer">Anto haipcu'rsefl.?L</a></p>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://esolangs.org/wiki/Bubblegum" rel="nofollow noreferrer">Bubblegum</a>, 147 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://esolangs.org/wiki/Bubblegum" rel="nofollow noreferrer">Bubblegum</a>, 147 bytes</h1>
 <p>most bytes aren't printable, xxd dump:</p>
 <pre><code>00000000: 5d00 0000 04ff ffff ffff ffff ff00 2489  ].............$.
 00000010: c9a2 02b2 e380 59c2 a6ba 55a5 fb4a a48a  ......Y...U..J..
@@ -133,16 +143,6 @@ P$. P$.
 <p>but how did you get a compressed stream to contain the words that must be in your source?</p>
 </blockquote>
 <p>I didn't. The stream is valid and I appended &quot;garbage&quot; (as far as the decoder is concerned), but because I disabled CRC checks, the decoder can't tell until it has already reached the end of the valid stream, at which point it will crash, but the text will have already been printed out.</p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 154 bytes</h1>
-<pre class="lang-bash prettyprint-override"><code>set &quot;I'm&quot; Slim Shady real stand
-&lt;&lt;.
-$1${6= $2 $3}. Yes, $1 the $4 $5.
-All you other$6s are just imitating.
-So, won't the $4$6 p${x=lease $5 up}?
-P$x. P$x.
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=LY7PCoJAHITv-xSD_MCLLfRH6aBEx26Cp4gOC25prG64u6RFL1IXIeqdepuKvMwwHwx898fZFK-NN0q9bf90djeav29GWngrv_KQqbJCVoi8QyOFgrGizlkcc0ZjukQJaAKaXjnW0gSgMWwhQTNQyNlSKXTaQX9ZQ5GBaCQOzliUVWmFLes9Z5kOcNK1b4cnRTjSpU2UFOa7Q7jjdcFSajl-8TccRPuhPw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, <s>124</s> 122 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>&quot;real&quot;“‚µ stand€¾“&quot;Shady&quot;&quot;Slim&quot;…I'm)•AΘ¥в‚Y•Sè`“ÿ ÿ ÿ.…Ü, ÿ€€ ÿ ÿ.
