--- a/q/35516.html
+++ b/q/35516.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>153</td><td>Zsh</td><td>240121T185607Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/269444#269444">pxeger</a></td></tr>
+<tr d-ix="0"><td>154</td><td>Zsh</td><td>240121T185607Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/269444#269444">pxeger</a></td></tr>
 <tr d-ix="1"><td>175</td><td>Python</td><td>140802T062018Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/35584#35584">DykgNUtR</a></td></tr>
 <tr d-ix="2"><td>133</td><td>///</td><td>240911T190559Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/275480#275480">autumn</a></td></tr>
 <tr d-ix="3"><td>096</td><td>Stax</td><td>240910T211313Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/275466#275466">Khuldrae</a></td></tr>
@@ -93,15 +93,15 @@
 <tr d-ix="64"><td>176</td><td>Python</td><td>140801T163455Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/35531#35531">nneonneo</a></td></tr>
 <tr d-ix="65"><td>171</td><td>PHP</td><td>140801T170533Z</td><td><a href="https://codegolf.stackexchange.com/questions/35516/the-real-slim-shady/35534#35534">Arctican</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 153 bytes</h1>
-<pre class="lang-bash prettyprint-override"><code>set I\'m Slim Shady real stand
+<div id="pu0" class="pu"><h1><a href="https://www.zsh.org/" rel="nofollow noreferrer">Zsh</a>, 154 bytes</h1>
+<pre class="lang-bash prettyprint-override"><code>set &quot;I'm&quot; Slim Shady real stand
 &lt;&lt;.
 $1${6= $2 $3}. Yes, $1 the $4 $5.
 All you other$6s are just imitating.
 So, won't the $4$6 p${x=lease $5 up}?
 P$x. P$x.
 </code></pre>
-<p><a href="https://ato.pxeger.com/run?1=LY7PCoJAHITv-xSD_MBLLdgf6WBEx26Cp6gOC265sam4K2nig0QXIeqdepuMvHzDDAx8j-fNJO-dMw6dQ_cq7XG8-NyNtNjs3QsirXokIq5RSKFhrEhjFgSckUeNvwRNQNOWYyvNCOTBJhI0A805W2uNOiuR9VtBvoEoJM6lsVAXZYVV6YmzKBvhmqWuHZ7kI6emWmopTN_nKPN2xUKqOH74Cw6e3ZBf" rel="nofollow noreferrer">Attempt This Online!</a></p>
+<p><a href="https://ato.pxeger.com/run?1=LY7PCoJAHITv-xSD_MCLLfRH6aBEx26Cp4gOC25prG64u6RFL1IXIeqdepuKvMwwHwx898fZFK-NN0q9bf90djeav29GWngrv_KQqbJCVoi8QyOFgrGizlkcc0ZjukQJaAKaXjnW0gSgMWwhQTNQyNlSKXTaQX9ZQ5GBaCQOzliUVWmFLes9Z5kOcNK1b4cnRTjSpU2UFOa7Q7jjdcFSajl-8TccRPuhPw" rel="nofollow noreferrer">Attempt This Online!</a></p>
 </div>
 <div id="pu1" class="pu"><h2>Python: 175</h2>
 <p>Just a small change to <a href="https://codegolf.stackexchange.com/a/35531/88192">the answer by <strong>nneonneo</strong></a>, but i can't comment and there don't seem to be private messages on this website so i'll post it this way.</p>
