--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20240913T054322Z
+"   /golfscore                                      20240913T061528Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275493.html">Function with memories of its past life         : 0275493</a>
 <a href="q/61552.html">No one please!                                  : 0061552</a>
 <a href="q/110648.html">Fewest (distinct) characters for Turing Complete: 0110648</a>
 <a href="q/273541.html">Sum of square roots (as an algebraic number)    : 0273541</a>
