--- a/q/275493.html
+++ b/q/275493.html
@@ -26,16 +26,29 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>Wolfram Language Mathematica</td><td>240913T081135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275502#275502">att</a></td></tr>
-<tr d-ix="1"><td>085</td><td>Java</td><td>240913T074322Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275500#275500">Kevin Cr</a></td></tr>
-<tr d-ix="2"><td>033</td><td>Arturo</td><td>240913T074801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275501#275501">chunes</a></td></tr>
+<tr d-ix="0"><td>033</td><td>Arturo</td><td>240913T074801Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275501#275501">chunes</a></td></tr>
+<tr d-ix="1"><td>019</td><td>Wolfram Language Mathematica</td><td>240913T081135Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275502#275502">att</a></td></tr>
+<tr d-ix="2"><td>085</td><td>Java</td><td>240913T074322Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275500#275500">Kevin Cr</a></td></tr>
 <tr d-ix="3"><td>023</td><td>Ruby</td><td>240913T071350Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275499#275499">G B</a></td></tr>
 <tr d-ix="4"><td>024</td><td>R</td><td>240913T071317Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275498#275498">pajonk</a></td></tr>
 <tr d-ix="5"><td>038</td><td>Python 3</td><td>240913T070917Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275497#275497">The Empt</a></td></tr>
 <tr d-ix="6"><td>021</td><td>PARI/GP</td><td>240913T062831Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275496#275496">alephalp</a></td></tr>
 <tr d-ix="7"><td>021</td><td>JavaScript V8</td><td>240913T061528Z</td><td><a href="https://codegolf.stackexchange.com/questions/275493/function-with-memories-of-its-past-life/275495#275495">Arnauld</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 19 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 33 bytes</h1>
+<pre><code>f:$-&gt;x-&gt;$.import:-&gt;x=&gt;[f&amp;print,x]
+</code></pre>
+<p><a href="http://arturo-lang.io/playground?95MPqx" rel="nofollow noreferrer">Try it!</a></p>
+<p>Ungolfed:</p>
+<pre><code>f: function [x][
+    function .import:[x] [y][
+        print x
+        f y
+    ]
+]
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 19 bytes</h1>
 <pre><code>(ss~#0~Print@#)&amp;
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X6P4/aSFxXXKBnUBRZl5JQ7Kmmr/023THJSKDZW40m3TgQwjGMNY6T8A" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
@@ -45,7 +58,7 @@
 </code></pre>
 <p><a href="https://tio.run/##y00syUjNTSzJTE78n2b7X9nAQUvDxcFBQ1lfL94@oCgzr8QhXtdORVNT7X@6bZqDUrGhEle6bTqQYQRjGCv9BwA" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 </div>
-<div id="pu1" class="pu"><h1>Java, 85 bytes</h1>
+<div id="pu2" class="pu"><h1>Java, 85 bytes</h1>
 
 <pre class="lang-java prettyprint-override"><code>interface N{N f(String s);static N i=s-&gt;t-&gt;{System.out.println(s);return N.i.f(t);};}
 </code></pre>
@@ -64,11 +77,6 @@
            N.i.f(t);}//     A call to the outer lambda with the inner String parameter,
                      //     using a static call to prevent 'self-reference in initializer' errors
 </code></pre>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 33 bytes</h1>
-<pre><code>f:$-&gt;x-&gt;$.import:-&gt;x=&gt;[f&amp;print,x]
-</code></pre>
-<p><a href="http://arturo-lang.io/playground?95MPqx" rel="nofollow noreferrer">Try it!</a></p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 23 bytes</h1>
 
